[package]
name = "teo-result"
description = "Result library for Teo."
version = "0.3.5"
edition = "2021"
license = "Apache-2.0"
homepage = "https://teodev.io"
documentation = "https://docs.teodev.io"
repository = "https://github.com/teodevgroup/teo-result"

[dependencies]
indexmap = { version = "2.6.0" }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = { version = "1.0.132", features = ["indexmap"] }
napi = { version = "2.16.13", default-features = false, features = ["napi5", "async", "chrono_date", "compat-mode"], optional = true }
pyo3 = { version = "0.23.2", features = ["extension-module", "chrono", "indexmap"], optional = true }
reqwest = { version = "0.12.8", optional = true }
multer = { version = "3.1.0", optional = true }
cookie = { version = "0.18.1", optional = true }
http = { version = "1.1.0", optional = true }
